--- a/app/src/main/res/layout/order_location_item.xml
+++ b/app/src/main/res/layout/order_location_item.xml
@@ -1,55 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <ImageView
-            android:id="@+id/image_view_connection_top"
-            android:layout_width="8dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+        android:id="@+id/image_view_connection_top"
+        android:layout_width="8dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-            android:id="@+id/image_view_location_point"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/ic_location_on_black_24dp"
-            app:layout_constraintStart_toStartOf="@+id/image_view_connection_top"
-            app:layout_constraintTop_toBottomOf="@+id/image_view_connection_top"
-            app:layout_constraintEnd_toEndOf="@+id/image_view_connection_top"/>
+        android:id="@+id/image_view_location_point"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@drawable/ic_location_on_black_24dp"
+        app:layout_constraintEnd_toEndOf="@+id/image_view_connection_top"
+        app:layout_constraintStart_toStartOf="@+id/image_view_connection_top"
+        app:layout_constraintTop_toBottomOf="@+id/image_view_connection_top" />
 
     <ImageView
-            android:id="@+id/image_view_connection_bottom"
-            android:layout_width="8dp"
-            android:layout_height="24dp"
-            app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/image_view_location_point"
-            app:layout_constraintStart_toStartOf="@+id/image_view_location_point"
-            app:layout_constraintEnd_toEndOf="@+id/image_view_location_point"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+        android:id="@+id/image_view_connection_bottom"
+        android:layout_width="8dp"
+        android:layout_height="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/image_view_location_point"
+        app:layout_constraintStart_toStartOf="@+id/image_view_location_point"
+        app:layout_constraintTop_toBottomOf="@+id/image_view_location_point"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-            android:id="@+id/text_view_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toEndOf="@+id/image_view_location_point"
-            tools:text="@tools:sample/cities"
-            style="@style/TextViewSmallHeader" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="@+id/image_view_connection_top"/>
+        android:id="@+id/text_view_location"
+        style="@style/TextViewSmallHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toEndOf="@+id/image_view_location_point"
+        app:layout_constraintTop_toTopOf="@+id/image_view_connection_top"
+        tools:text="@tools:sample/cities" />
 
     <TextView
-            android:id="@+id/text_view_arrival_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_location"
-            app:layout_constraintStart_toStartOf="@+id/text_view_location"
-            tools:text="@tools:sample/date/hhmm"/>
+        android:id="@+id/text_view_arrival_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="@+id/text_view_location"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_location"
+        tools:text="@tools:sample/date/hhmm" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
